[package]
name = "gtp"
version = "0.1.0"
authors = ["Jonas Bakken <jonasxb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "*"
env_logger = "*"
serde = "1"
serde_json = "1"
clap = "3.0.0-beta.2"
